test/libsolidity/syntaxTests/functionTypes/external_function_type_to_uint.sol
contract C {
    function f() public returns (uint) {
        return uint(this.f);
    }
}
// ----
// TypeError: Explicit type conversion not allowed from "function () external returns (uint256)" to "uint256".
